--- a/config.conf
+++ b/config.conf
@@ -2,13 +2,13 @@
 #开始在一起的日期，格式参考 2022-06-24
 start_date=2022-06-24
 #你女朋友所在的城市，写城市名或省份名或者所在的区  如 "云南"或者"昆明"或者"五华区"
-city1=昆明
+city1=青岛
 #你女朋友的家乡，写城市名或省份名或者所在的区  如 "云南"或者"昆明"或者"五华区"
 city2=腾冲
 #你女朋友的生日，注意格式只写*月*日 如："07-21"
-birthday_lover=07-21
+birthday_lover=04-08
 #你的生日,注意格式只写*月*日 如："07-21"
-birthday_my=05-04
+birthday_my=08-01
 #以下为微信测试号的参数，在申请时会显示
 app_id=wx0aa56bb999886964
 app_secret=e695ab2bdf10e9b6d492adf968154205
